tests/baselines/reference/decoratorOnClassMethod18(strict=true).errors.txt
decoratorOnClassMethod18.ts(4,5): error TS7008: Member 'p1' implicitly has an 'any' type.
decoratorOnClassMethod18.ts(7,5): error TS7008: Member 'p2' implicitly has an 'any' type.


==== decoratorOnClassMethod18.ts (2 errors) ====
    declare var decorator: any;
    
    class Foo {
        p1
        ~~
!!! error TS7008: Member 'p1' implicitly has an 'any' type.
    
        @decorator()
        p2;
        ~~
!!! error TS7008: Member 'p2' implicitly has an 'any' type.
    }
    